<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="title"
            type="String" />

        <variable
            name="text"
            type="String" />

        <variable
            name="textButtonSuccess"
            type="String" />

        <variable
            name="textButtonCancel"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/vieLine"
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/line_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imvIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vieLine"
            app:srcCompat="@drawable/ic_warning"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvwTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{title}"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="@{title.empty ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@+id/imvIcon"
            app:layout_constraintStart_toStartOf="@+id/imvIcon"
            app:layout_constraintTop_toBottomOf="@+id/imvIcon"
            tools:text="The title will be show is here" />

        <TextView
            android:id="@+id/tvwTextText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@{text}"
            android:textColor="@color/black"
            android:visibility="@{text.empty ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwTextTitle"
            tools:text="Is here we can see message" />

        <LinearLayout
            android:id="@+id/lltButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvwTextText"
            app:layout_constraintStart_toStartOf="@+id/tvwTextText"
            app:layout_constraintTop_toBottomOf="@+id/tvwTextText">

            <Button
                android:id="@+id/btnSuccess"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{textButtonSuccess}"
                android:visibility="@{textButtonSuccess.empty ? View.GONE : View.VISIBLE}"
                tools:text="Yes" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@{textButtonCancel}"
                android:visibility="@{textButtonCancel.empty ? View.GONE : View.VISIBLE}"
                tools:text="No" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>